[gd_scene load_steps=21 format=2]

[ext_resource path="res://assets/images/gui/charpanel/panel_charinfo_details_big.png" type="Texture" id=1]
[ext_resource path="res://files/scenes/CharPanel/SkillPanel.gd" type="Script" id=2]
[ext_resource path="res://assets/images/iconsskills/arron_1.png" type="Texture" id=3]
[ext_resource path="res://assets/images/icons/icon_sandtimer.png" type="Texture" id=4]
[ext_resource path="res://assets/images/Fight/Heroes/Arron/Arron_idle/Arron_idle_00.png" type="Texture" id=5]
[ext_resource path="res://assets/fonts/mainfont_30.tres" type="DynamicFont" id=6]
[ext_resource path="res://assets/images/buttons/charpanel/button_skill_pressed.png" type="Texture" id=9]
[ext_resource path="res://assets/images/gui/charpanel/panel_charinfo_details_descriptionmask.png" type="Texture" id=10]
[ext_resource path="res://assets/themes/button_round.tres" type="Theme" id=11]
[ext_resource path="res://assets/fonts/mainfont_bold_30.tres" type="DynamicFont" id=12]
[ext_resource path="res://assets/themes/button_small.tres" type="Theme" id=13]
[ext_resource path="res://assets/images/iconsskills/shield.png" type="Texture" id=14]
[ext_resource path="res://assets/images/buttons/charpanel/expbar_charinfo_bigframe.png" type="Texture" id=15]
[ext_resource path="res://assets/images/buttons/charpanel/hpbar_charinfo_bigfiller.png" type="Texture" id=16]
[ext_resource path="res://assets/images/buttons/charpanel/expbar_charinfo_bigfiller.png" type="Texture" id=17]
[ext_resource path="res://assets/images/iconsskills/source_pierce.png" type="Texture" id=18]
[ext_resource path="res://tooltip_theme.tres" type="Theme" id=19]
[ext_resource path="res://files/scenes/combat/ResistIcon.tscn" type="PackedScene" id=20]
[ext_resource path="res://assets/themes/scroll_grey.tres" type="Theme" id=21]
[ext_resource path="res://assets/images/traits/healthskillsdouble.png" type="Texture" id=23]

[node name="SkillPanel" type="TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 19 )
texture = ExtResource( 1 )
script = ExtResource( 2 )

[node name="StatsPanel" type="Control" parent="."]
margin_left = 196.0
margin_top = 101.0
margin_right = 440.0
margin_bottom = 509.0

[node name="name" type="Label" parent="StatsPanel"]
margin_left = 183.0
margin_top = -45.0
margin_right = 481.0
margin_bottom = -9.0
custom_colors/font_color = Color( 0.870588, 0.870588, 0.870588, 1 )
custom_fonts/font = ExtResource( 12 )
text = "arron"
align = 1

[node name="icon_bounds" type="Control" parent="StatsPanel"]
margin_left = 34.0
margin_top = 51.0
margin_right = 224.0
margin_bottom = 335.0
rect_clip_content = true

[node name="icon" type="TextureRect" parent="StatsPanel/icon_bounds"]
margin_left = 7.0
margin_top = 3.0
margin_right = 186.0
margin_bottom = 282.0
grow_horizontal = 2
grow_vertical = 0
rect_min_size = Vector2( 179, 279 )
texture = ExtResource( 5 )
stretch_mode = 6

[node name="TextureRect" type="TextureRect" parent="StatsPanel"]
margin_left = 28.8622
margin_top = 45.825
margin_right = 228.862
margin_bottom = 375.825
texture = ExtResource( 10 )

[node name="desc" type="RichTextLabel" parent="StatsPanel"]
margin_left = 14.0517
margin_top = 498.637
margin_right = 640.052
margin_bottom = 814.637
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "Character Descript with scroll"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="exp" type="TextureProgress" parent="StatsPanel"]
margin_left = 272.0
margin_top = 304.0
margin_right = 634.0
margin_bottom = 336.0
value = 50.0
texture_over = ExtResource( 15 )
texture_progress = ExtResource( 17 )

[node name="Label" type="Label" parent="StatsPanel/exp"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 5.0
custom_colors/font_color = Color( 0.870588, 0.870588, 0.870588, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
text = "50/100"
align = 1
valign = 1

[node name="hp" type="TextureProgress" parent="StatsPanel"]
margin_left = 272.0
margin_top = 339.0
margin_right = 634.0
margin_bottom = 371.0
value = 50.0
texture_over = ExtResource( 15 )
texture_progress = ExtResource( 16 )

[node name="Label" type="Label" parent="StatsPanel/hp"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 5.0
custom_colors/font_color = Color( 0.870588, 0.870588, 0.870588, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
text = "50/100"
align = 1
valign = 1

[node name="friend" type="TextureRect" parent="StatsPanel"]
margin_left = 193.0
margin_top = 27.0
margin_right = 254.0
margin_bottom = 90.0
hint_tooltip = "FRIENDPOINTSTOOLTIP"
theme = ExtResource( 19 )
texture = ExtResource( 23 )
expand = true
stretch_mode = 5

[node name="Label" type="Label" parent="StatsPanel/friend"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -27.5
margin_top = -47.0
margin_right = 34.5
margin_bottom = -23.0
custom_colors/font_color = Color( 0.0666667, 0.0666667, 0.0666667, 1 )
custom_colors/font_outline_modulate = Color( 0.184314, 0.180392, 0.2, 1 )
text = "100"
align = 1

[node name="dmg" type="HBoxContainer" parent="StatsPanel"]
margin_left = 59.809
margin_top = 340.0
margin_right = 201.809
margin_bottom = 372.0
size_flags_horizontal = 3
alignment = 1

[node name="stat" type="Label" parent="StatsPanel/dmg"]
margin_top = 4.0
margin_right = 34.0
margin_bottom = 28.0
custom_colors/font_color = Color( 0.870588, 0.870588, 0.870588, 1 )
text = "BD"
align = 1

[node name="value" type="Label" parent="StatsPanel/dmg"]
margin_left = 38.0
margin_top = 4.0
margin_right = 105.0
margin_bottom = 28.0
mouse_filter = 1
custom_colors/font_color = Color( 0.870588, 0.870588, 0.870588, 1 )
text = "4000"
align = 1

[node name="icon" type="TextureRect" parent="StatsPanel/dmg"]
margin_left = 109.0
margin_right = 141.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
texture = ExtResource( 18 )
expand = true

[node name="ResPanel" type="Control" parent="."]
margin_left = 449.0
margin_top = 166.0
margin_right = 843.0
margin_bottom = 376.0

[node name="name" type="Label" parent="ResPanel"]
anchor_right = 1.0
margin_bottom = 32.0
custom_colors/font_color = Color( 0.870588, 0.870588, 0.870588, 1 )
text = "RESISTANCES"
align = 1

[node name="res" type="GridContainer" parent="ResPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 33.0
margin_top = 42.0
margin_right = -23.0
columns = 3

[node name="panel" type="HBoxContainer" parent="ResPanel/res"]
margin_right = 113.0
margin_bottom = 50.0

[node name="icon" type="TextureRect" parent="ResPanel/res/panel"]
margin_right = 50.0
margin_bottom = 50.0
texture = ExtResource( 14 )

[node name="src" type="TextureRect" parent="ResPanel/res/panel/icon"]
anchor_right = 1.0
anchor_bottom = 1.0
expand = true

[node name="Label" type="Label" parent="ResPanel/res/panel"]
margin_left = 54.0
margin_top = 13.0
margin_right = 113.0
margin_bottom = 37.0
rect_min_size = Vector2( 56, 0 )
custom_colors/font_color = Color( 0.870588, 0.870588, 0.870588, 1 )
text = ": 99%"

[node name="switch_left" type="Button" parent="."]
margin_left = 249.0
margin_top = 954.0
margin_right = 313.0
margin_bottom = 1018.0
theme = ExtResource( 13 )
text = "<-"

[node name="close" type="Button" parent="."]
margin_left = 377.0
margin_top = 954.0
margin_right = 680.0
margin_bottom = 1018.0
theme = ExtResource( 11 )
text = "CLOSE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="switch_right" type="Button" parent="."]
margin_left = 749.0
margin_top = 954.0
margin_right = 813.0
margin_bottom = 1018.0
theme = ExtResource( 13 )
text = "->"

[node name="skills" type="ScrollContainer" parent="."]
margin_left = 1054.0
margin_top = 96.0
margin_right = 1723.0
margin_bottom = 1017.0
theme = ExtResource( 21 )
scroll_horizontal_enabled = false

[node name="list" type="VBoxContainer" parent="skills"]
margin_right = 650.0
margin_bottom = 108.0
rect_min_size = Vector2( 650, 0 )

[node name="Panel" type="HBoxContainer" parent="skills/list"]
self_modulate = Color( 1, 0, 0, 1 )
margin_right = 650.0
margin_bottom = 108.0
rect_min_size = Vector2( 0, 100 )

[node name="icon_container" type="CenterContainer" parent="skills/list/Panel"]
margin_right = 108.0
margin_bottom = 108.0

[node name="TextureRect" type="TextureRect" parent="skills/list/Panel/icon_container"]
margin_right = 108.0
margin_bottom = 108.0
texture = ExtResource( 9 )
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="icon" type="TextureRect" parent="skills/list/Panel/icon_container/TextureRect"]
margin_left = 9.0
margin_top = 9.0
margin_right = 98.0
margin_bottom = 98.0
texture = ExtResource( 3 )
expand = true

[node name="VBoxContainer" type="VBoxContainer" parent="skills/list/Panel"]
margin_left = 112.0
margin_right = 650.0
margin_bottom = 108.0
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="skills/list/Panel/VBoxContainer"]
margin_right = 538.0
margin_bottom = 31.0

[node name="name" type="Label" parent="skills/list/Panel/VBoxContainer/HBoxContainer"]
margin_right = 303.0
margin_bottom = 31.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0.870588, 0.870588, 0.870588, 1 )
custom_fonts/font = ExtResource( 6 )
text = "Skill"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="timer_icon" type="Control" parent="skills/list/Panel/VBoxContainer/HBoxContainer"]
margin_left = 307.0
margin_right = 323.0
margin_bottom = 31.0
rect_min_size = Vector2( 16, 31 )

[node name="TextureRect" type="TextureRect" parent="skills/list/Panel/VBoxContainer/HBoxContainer/timer_icon"]
margin_top = -3.0
margin_right = 16.0
margin_bottom = 28.0
texture = ExtResource( 4 )
stretch_mode = 4

[node name="cd" type="Label" parent="skills/list/Panel/VBoxContainer/HBoxContainer"]
margin_left = 327.0
margin_top = 3.0
margin_right = 344.0
margin_bottom = 27.0
custom_colors/font_color = Color( 0.870588, 0.870588, 0.870588, 1 )
text = "0"

[node name="Label" type="Label" parent="skills/list/Panel/VBoxContainer/HBoxContainer"]
margin_left = 348.0
margin_top = 3.0
margin_right = 490.0
margin_bottom = 27.0
custom_colors/font_color = Color( 0.870588, 0.870588, 0.870588, 1 )
text = "SKILLTURNS"

[node name="separator" type="Control" parent="skills/list/Panel/VBoxContainer/HBoxContainer"]
margin_left = 494.0
margin_right = 504.0
margin_bottom = 31.0
rect_min_size = Vector2( 10, 0 )

[node name="ResistIcon" parent="skills/list/Panel/VBoxContainer/HBoxContainer" instance=ExtResource( 20 )]
margin_left = 508.0
margin_right = 538.0
margin_bottom = 31.0

[node name="descript" type="RichTextLabel" parent="skills/list/Panel/VBoxContainer"]
margin_top = 35.0
margin_right = 538.0
margin_bottom = 60.0
custom_colors/default_color = Color( 0.870588, 0.870588, 0.870588, 1 )
bbcode_enabled = true
bbcode_text = "Skill Descrpit"
text = "Skill Descrpit"
fit_content_height = true
